Updates on index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   <div class="about" id='intro'>
     <h1>About Me</h1>
     <img src="me.png" alt="This is Me!" wsidth="150" height="150">
-    <p>Hi! I'm Sanjna, a second-year student at the University of Southern California, graduating in May 2026, with a degree in Computer Science and AI. I hope to develop and grow my skills in fields such as AI/ML, quantum computing, full-stack development, and more! I am extremely involved in the USC community. As an active member of the USC AeroDesign Team, Women in Computing, and Society of Women Engineers, I make sure to utilize all my skills to make the world smaller. If you ever want to reach out, please contact me via <a href="mailto:sanjnasu@usc.edu">sanjnasu@usc.edu</a>.</p>
+    <p>I'm Steven, a second-year Computer Science and AI student at the University of Southern California, set to graduate in May 2026. My academic passion revolves around AI/ML, quantum computing, and full-stack development. I actively engage in the USC community, contributing to the USC AeroDesign Team, Women in Computing, and the Society of Women Engineers.
+
+In parallel, I'm working on projects such as RateMyDininghall, Rasa Chatbot, Trivia Chrome Extension, and more! These projects have strengthed my problem-solving skills and allow me apply my knowledge to real-world scenarios. I'm committed to harnessing technology for positive change and eager to collaborate with fellow enthusiasts. For professional inquiries, please contact me at <a href="mailto:sanjnasu@usc.edu">sanjnasu@usc.edu.</a>.</p>
   </div>
 
   <div class='profile'>
@@ -138,13 +140,13 @@
           <strong><p>USC Women in Computing | Student Programmer | August 2023</p></strong>
           <ul>
             <ul>
-                  <li>Organized and hosted more than 5 networking, social, and mentoring events in collaboration with fellow SWE Ambassadors, fostering connections and personal growth within the engineering community.</li>
+                  <li>Organized multiple sessions </li>
 
-                  <li>Successfully boosted student participation, witnessing a remarkable 15% increase in engagement among non-SWE members, demonstrating the effectiveness of your outreach efforts.</li>
+                  <li>Actively involved as a student programmer in Women in Computing, organizing and leading weekly LeetCode sessions to help fellow members improve their coding skills.</li>
 
-                  <li>Worked closely with other SWE Ambassadors to enhance overall student satisfaction rates, thereby contributing to a more vibrant and supportive environment within the Society of Women Engineers.</li>
+                  <li>Demonstrated leadership by leading a chatbot project, collaborating with a team of four engineers to design and develop a conversational AI solution, providing valuable hands-on experience in AI and project management.</li>
 
-                  <li>Spearheaded the creation of innovative events and initiatives that facilitated collaboration between various engineering groups, promoting interdisciplinary cooperation and knowledge exchange among engineering students.</li>
+                  <li>Contributed to the organization's communication efforts by aiding in the design and content creation of weekly newsletters, helping to keep members informed and engaged with important updates and opportunities within the field.</li>
                 </ul>
           </ul>
         </div>
