--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="about" id='intro'>
     <h1>About Me</h1>
     <img src="me.png" alt="This is Me!" wsidth="150" height="150">
-    <p>I'm Steven, a second-year Computer Science and AI student at the University of Southern California, set to graduate in May 2026. My academic passion revolves around AI/ML, quantum computing, and full-stack development. I actively engage in the USC community, contributing to the USC AeroDesign Team, Women in Computing, and the Society of Women Engineers.
+    <p>Hi! I'm Sanjna, a second-year Computer Science and AI student at the University of Southern California, set to graduate in May 2026. My academic passion revolves around AI/ML, quantum computing, and full-stack development. I actively engage in the USC community, contributing to the USC AeroDesign Team, Women in Computing, and the Society of Women Engineers.
 
 In parallel, I'm working on projects such as RateMyDininghall, Rasa Chatbot, Trivia Chrome Extension, and more! These projects have strengthed my problem-solving skills and allow me apply my knowledge to real-world scenarios. I'm committed to harnessing technology for positive change and eager to collaborate with fellow enthusiasts. For professional inquiries, please contact me at <a href="mailto:sanjnasu@usc.edu">sanjnasu@usc.edu.</a>.</p>
   </div>
@@ -140,8 +140,6 @@ In parallel, I'm working on projects such as RateMyDininghall, Rasa Chatbot, Tri
           <strong><p>USC Women in Computing | Student Programmer | August 2023</p></strong>
           <ul>
             <ul>
-                  <li>Organized multiple sessions </li>
-
                   <li>Actively involved as a student programmer in Women in Computing, organizing and leading weekly LeetCode sessions to help fellow members improve their coding skills.</li>
 
                   <li>Demonstrated leadership by leading a chatbot project, collaborating with a team of four engineers to design and develop a conversational AI solution, providing valuable hands-on experience in AI and project management.</li>
